jenkins/templates/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080   
      targetPort: 8080   
  selector:
    app: jenkins
